2011-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_internal.py:
	  Add another assert.
	* pychecker/CodeChecks.py:
	  Fix getting module names with * in it when doing star imports.

2011-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  Allow getting the whole dict, for testing.
	* test/test_internal.py:
	  Add a test that shows that we are creating bogus modules
	  when doing star imports.

2011-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/input/starimport.py:
	* test/input/starimportfrom.py:
	  Actually add input files for the test

2011-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  Key functions on their alias instead of their own name.
	  Resolves problem of import gettext and _ = gettext.gettext
	* test/test_internal.py:
	  Only one test is now left TODO.

2011-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_internal.py:
	  Add another test to show that the problem is in the original
	  module, 'gettext' is being added as a function.

2011-01-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  Add an assertion to make sure that the alias being imported
	  was not already imported before.
	* test/test_internal.py:
	  Add a test for star imports.
	  Also triggers the assert above.

2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  Older Python versions do not have try/except/finally.

2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/check.py:
	  When processing files, only return warnings about newly loaded
	  modules because of the files processed.
	* test/test_internal.py:
	  Fix up the tests now that warnings don't bleed over from one test
	  to the next.

2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py: