@@ -636,10 +636,15 @@ def _handleImport(code, operand, module, main, fromWhere):
     # if fromModule:
     #    assert isinstance(fromModule, pcmodules.PyCheckerModule)
 
-    if isinstance(fromWhere, pcmodules.PyCheckerModule) and operand == '*':
-        utils.debug('Handling * import, adding %r', fromWhere.getTokenNames())
-        for name in fromWhere.getTokenNames():
-            module.addImported(name, code.getLineNum(), fromWhere)
+    if operand == '*':
+        if isinstance(fromWhere, pcmodules.PyCheckerModule):
+            utils.debug('Handling * import, adding %r',
+                fromWhere.getTokenNames())
+            for name in fromWhere.getTokenNames():
+                module.addImported(name, code.getLineNum(), fromWhere)
+        else:
+            utils.debug('Handling * import, but no PC module for %r',
+                fromWhere)
 
     # FIXME: direct names imported should be added too
 
